--- a/public/styles/animations.css
+++ b/public/styles/animations.css
@@ -1,12 +1,16 @@
-.app-fade-enter-active{
+.app-fade-enter-active {
     animation: appFade 0.2s;
 }
 
-.app-fade-leave-active{
+.app-fade-leave-active {
     animation: appFade 0.2s reverse;
 }
 
 @keyframes appFade {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
