--- a/src/assets/styles/essential.css
+++ b/src/assets/styles/essential.css
@@ -13,6 +13,12 @@ body {
     background-color: #f4f4f5;
 }
 
+.place,
+.page-stage,
+.page-content__wrapper {
+    height: 100%;
+}
+
 .page-header {
     display: flex;
     flex-wrap: wrap;
