--- a/src/assets/styles/css/fonts.css
+++ b/src/assets/styles/css/fonts.css
@@ -4,8 +4,8 @@
     font-weight: 400;
     src:
         local('Inter'),
-        url('../fonts/Inter/Inter-Regular.woff2') format('woff2'),
-        url('../fonts/Inter/Inter-Regular.woff') format('woff');
+        url('../../fonts/Inter/Inter-Regular.woff2') format('woff2'),
+        url('../../fonts/Inter/Inter-Regular.woff') format('woff');
     font-display: swap;
 }
 
@@ -15,8 +15,8 @@
     font-weight: 500;
     src:
         local('Inter'),
-        url('../fonts/Inter/Inter-Medium.woff2') format('woff2'),
-        url('../fonts/Inter/Inter-Medium.woff') format('woff');
+        url('../../fonts/Inter/Inter-Medium.woff2') format('woff2'),
+        url('../../fonts/Inter/Inter-Medium.woff') format('woff');
     font-display: swap;
 }
 
@@ -26,7 +26,7 @@
     font-weight: 700;
     src:
         local('Inter'),
-        url('../fonts/Inter/Inter-Bold.woff2') format('woff2'),
-        url('../fonts/Inter/Inter-Bold.woff') format('woff');
+        url('../../fonts/Inter/Inter-Bold.woff2') format('woff2'),
+        url('../../fonts/Inter/Inter-Bold.woff') format('woff');
     font-display: swap;
 }
