--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -1,13 +1,13 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
 }
 
 body,
@@ -20,17 +20,17 @@ figure,
 blockquote,
 dl,
 dd {
-  margin: 0;
+    margin: 0;
 }
 
-ul[role=list],
-ol[role=list] {
-  list-style: none;
+ul[role='list'],
+ol[role='list'] {
+    list-style: none;
 }
 
 body {
-  min-height: 100vh;
-  line-height: 1.5;
+    min-height: 100vh;
+    line-height: 1.5;
 }
 
 h1,
@@ -40,189 +40,192 @@ h4,
 button,
 input,
 label {
-  line-height: 1.1;
+    line-height: 1.1;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  text-wrap: balance;
+    text-wrap: balance;
 }
 
 a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentColor;
+    text-decoration-skip-ink: auto;
+    color: currentColor;
 }
 
 img,
 picture {
-  max-width: 100%;
-  display: block;
+    max-width: 100%;
+    display: block;
 }
 
 input,
 button,
 textarea,
 select {
-  font: inherit;
+    font: inherit;
 }
 
 textarea:not([rows]) {
-  min-height: 10em;
+    min-height: 10em;
 }
 
 :target {
-  scroll-margin-block: 5ex;
+    scroll-margin-block: 5ex;
 }
 
 .app-fade-enter-active {
-  animation: appFade 0.2s;
+    animation: appFade 0.2s;
 }
 
 .app-fade-leave-active {
-  animation: appFade 0.2s reverse;
+    animation: appFade 0.2s reverse;
 }
 
 @keyframes appFade {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 :root {
-  --font-family-inter: Inter, sans-serif;
+    --font-family-inter: Inter, sans-serif;
 }
 
 body {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 .page {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
-  background-color: #f4f4f5;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+    background-color: #f4f4f5;
 }
 
 .place,
 .page-stage,
 .page-content__wrapper {
-  height: 100%;
+    height: 100%;
 }
 
 .page-header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  background-color: #fff;
-  padding: 0.75em 1.5em;
-  border-bottom: 1px solid #e5e7eb;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: #fff;
+    padding: 0.75em 1.5em;
+    border-bottom: 1px solid #e5e7eb;
 }
 .page-header__logo {
-  font-size: 1.25em;
-  color: #111827;
-  font-weight: 700;
-  font-family: var(--font-family-inter);
-  text-transform: uppercase;
-  text-decoration: none;
+    font-size: 1.25em;
+    color: #111827;
+    font-weight: 700;
+    font-family: var(--font-family-inter);
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .page-header-nav__list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  margin-top: 0;
-  margin-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .page-header-nav__item {
-  margin-right: 0.625em;
+    margin-right: 0.625em;
 }
 .page-header-nav__link {
-  font-size: 0.9375em;
-  color: #374151;
-  line-height: 1.5;
-  font-weight: 500;
-  text-decoration: none;
-  font-family: var(--font-family-inter);
+    font-size: 0.9375em;
+    color: #374151;
+    line-height: 1.5;
+    font-weight: 500;
+    text-decoration: none;
+    font-family: var(--font-family-inter);
 }
 
 .page-footer {
-  background: hsl(0, 0%, 13%);
-  text-align: center;
-  padding: 0.9375em;
+    background: hsl(0, 0%, 13%);
+    text-align: center;
+    padding: 0.9375em;
 }
 
 .page-login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 .page-login__wrapper {
-  width: 100%;
-  max-width: 28em;
-  margin-left: 0.9375em;
-  margin-right: 0.9375em;
-  border-width: 1px;
-  border-radius: 1.5em;
-  border-style: solid;
-  border-color: #e5e7eb;
-  box-shadow: 0 0 rgba(0, 0, 0, 0), 0 0 rgba(0, 0, 0, 0), 0 1px 0.125em 0 hsla(0, 0%, 0%, 0.05);
-  background-color: #fff;
-  padding: 2em;
+    width: 100%;
+    max-width: 28em;
+    margin-left: 0.9375em;
+    margin-right: 0.9375em;
+    border-width: 1px;
+    border-radius: 1.5em;
+    border-style: solid;
+    border-color: #e5e7eb;
+    box-shadow:
+        0 0 rgba(0, 0, 0, 0),
+        0 0 rgba(0, 0, 0, 0),
+        0 1px 0.125em 0 hsla(0, 0%, 0%, 0.05);
+    background-color: #fff;
+    padding: 2em;
 }
 .page-login__header {
-  color: #0f172a;
-  font-weight: 700;
-  letter-spacing: -0.75px;
-  text-align: center;
-  font-family: var(--font-family-inter);
+    color: #0f172a;
+    font-weight: 700;
+    letter-spacing: -0.75px;
+    text-align: center;
+    font-family: var(--font-family-inter);
 }
 .page-login__subheader {
-  font-size: 1em;
-  color: hsl(215, 16%, 47%);
-  margin-top: 0.5em;
-  letter-spacing: -0.75px;
-  text-align: center;
-  font-family: var(--font-family-inter);
+    font-size: 1em;
+    color: hsl(215, 16%, 47%);
+    margin-top: 0.5em;
+    letter-spacing: -0.75px;
+    text-align: center;
+    font-family: var(--font-family-inter);
 }
 .page-login__field {
-  display: flex;
-  margin-top: 1.5em;
-  flex-direction: column;
+    display: flex;
+    margin-top: 1.5em;
+    flex-direction: column;
 }
 .page-login__txt {
-  font-size: 0.875em;
-  font-weight: 500;
-  color: hsl(215, 25%, 27%);
-  margin-bottom: 0.5714285714em;
-  font-family: var(--font-family-inter);
+    font-size: 0.875em;
+    font-weight: 500;
+    color: hsl(215, 25%, 27%);
+    margin-bottom: 0.5714285714em;
+    font-family: var(--font-family-inter);
 }
 .page-login .page-login__input {
-  font-size: 1em;
-  background-color: #f6f7f8;
-  border: 1px solid #cbd5e1;
-  color: #0f172a;
-  padding: 0.5em 2.5em;
-  border-radius: 1em;
+    font-size: 1em;
+    background-color: #f6f7f8;
+    border: 1px solid #cbd5e1;
+    color: #0f172a;
+    padding: 0.5em 2.5em;
+    border-radius: 1em;
 }
 .page-login .page-login__btn {
-  font-size: 1em;
-  color: #fff;
-  background-color: #1997f0;
-  border: none;
-  font-weight: 700;
-  line-height: 1.5;
-  border-radius: 1em;
-  width: 100%;
-  margin-top: 1.5em;
-  padding: 0.75em;
-  cursor: pointer;
-  font-family: var(--font-family-inter);
+    font-size: 1em;
+    color: #fff;
+    background-color: #1997f0;
+    border: none;
+    font-weight: 700;
+    line-height: 1.5;
+    border-radius: 1em;
+    width: 100%;
+    margin-top: 1.5em;
+    padding: 0.75em;
+    cursor: pointer;
+    font-family: var(--font-family-inter);
 }
 .page-login .page-login__btn:hover {
-  background-color: rgba(25, 151, 240, 0.9019607843);
+    background-color: rgba(25, 151, 240, 0.9019607843);
 }
